feat(js) Add script links to html; add js to verify working

--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header>
+    <!-- <header>
         <h1>Hangman</h1>
         <h2>Save your life... or run away!</h2>
     </header>
-    <main>
-
-    </main>
-    <footer>
-    </footer>
-
+    <form>
+      <h3>Guess a word:</h3>
+      <input
+          type="text"
+          name="guess"
+          value="?">
+      <button>
+      </button>
+    </form> -->
   </body>
-  <script type="text/javascript">
-      src="js/common-words.js"
-  </script>
+  <script src="js/common-words.js"></script>
+  <script src="js/app.js"></script>
 </html>
