feat(core) WIP - Getting character processing to work

--- a/index.html
+++ b/index.html
@@ -24,17 +24,10 @@
             value=""
             onkeyup="getChar()">
         <p>Turns: <span id="turns-left"></span></p>
-        <!-- <button
-            class="btn-guess"
-            type=button
-            name=guess>
-            <p>Guess!
-            </p>
-        </button> -->
         <button
             class="btn-restart"
             name="button"
-            onclick="clearGame()">
+            onclick="gameReset()">
             <p>Start Over
             </p>
         </button>
