feat(core) UI cosmetic changes; Disallow repeats of same char

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <form class="interaction-form">
-        <h2 id="guess">Guess a word:</h2>
+        <h2 id="guess">Enter a letter:</h2>
         <input
             id="input-guess"
             type="text"
